# rocq-structured-output-print-assumptions

./: .gitignore  LICENSE  Makefile  README.md  dune-project  rocq-print-assumptions-json.opam
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml
etc/: prepare-opam-release.sh
src/: compat.ml  dune  g_print_assumptions_json.mlg  print_assumptions_json.ml  print_assumptions_json.mli
tests/: Tests.expected  Tests.v  dune
theories/: PrintAssumptionsJSON.v  dune
