(library
 (name print_assumptions_json_plugin)
 (public_name rocq-print-assumptions-json.plugin)
 (synopsis "Structured JSON output for Print Assumptions")
 (flags :standard -rectypes -w -27-32-33-39)
 (libraries coq-core.plugins.ltac)
 (preprocess (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~coq:(Defined \"%{coq:version.major}.%{coq:version.minor}\")")))

(coq.pp (modules g_print_assumptions_json))
